--- a/index.html
+++ b/index.html
@@ -2,9 +2,88 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>My Times</title>
+     <link rel="stylesheet" href="./resources/css/index.css" type="text/css">
   </head>
-  <body>
 
+  <body>
+    <!-- Header Section -->
+    <header>
+
+     <div class="logo">
+       <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg" alt="My Times Logo"/>
+       <h1>My Times</h1>
+     </div>
+
+     <div class="nav">
+       <li><a href="#">World</a></li>
+       <li><a href="#">U.S.</a></li>
+       <li><a href="#">Tech</a></li>
+       <li><a href="#">Science</a></li>
+     </div>
+
+   </header>
+  <!-- Main Content -->
+  <div class="main">
+    <!-- Big Column -->
+    <div class= "col-large">
+      <!-- First Story -->
+      <div class = "main-story">
+        <div class="story-image">
+         <div class="story-image-headline">
+           <h2>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h2>
+         </div>
+        </div>
+        <div class="narrative">
+          <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+        </p>
+      </div>
+      <!-- Second Two Stories -->
+      <div class="stories">
+       <div class="story">
+         <h3>Orca Spends Vacation at Land World Puget</h3>
+         <div class="content">
+          <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+           <div class="narrative">
+             <p>Earth Spins Backwards for 2017</p>
+           </div>
+         </div>
+       </div>
+       <div class="story">
+         <h3>Burger for Breakfast: How Early is too Early?</h3>
+         <div class="content">
+           <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+           <div class="narrative">
+             <p>Research Shows Cameras Erase Memory</p>
+           </div>
+         </div>
+       </div>
+      </div>
+    </div>
+    <!-- Medium Column -->
+    <div class="col-medium">
+      <div class="stories">
+       <div class="story">
+         <h3>FBI Finds Action Star Guilty of False Advertising</h3>
+         <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
+       </div>
+       <div class="story">
+         <div class=narrative>
+           <p>Cats in Control-Is It a Thing?</p>
+           <div class="content">
+             <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
+           </div>
+         </div>
+       </div>
+      </div>
+    </div>
+    <!-- Small Column -->
+    <div class= "col-small">
+    </div>
+
+    </div>
+    </div>
+    </div>
+  </div>
   </body>
 </html>
