--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
          <div class="content">
           <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
            <div class="narrative">
-             <p>Earth Spins Backwards for 2017</p>
+             <div class="fence">
+             <h4>Earth Spins Backwards for 2017</h4>
+             </div>
            </div>
          </div>
        </div>
@@ -54,31 +56,43 @@
          <div class="content">
            <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
            <div class="narrative">
-             <p>Research Shows Cameras Erase Memory</p>
+             <div class="camera">
+             <h4>Research Shows Cameras Erase Memory</h4>
+             </div>
            </div>
-         </div>
+          </div>
+        </div>
        </div>
       </div>
     </div>
+
     <!-- Medium Column -->
     <div class="col-medium">
-      <div class="stories">
+      <div class="medium-stories">
        <div class="story">
          <h3>FBI Finds Action Star Guilty of False Advertising</h3>
          <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
        </div>
        <div class="story">
          <div class=narrative>
-           <p>Cats in Control-Is It a Thing?</p>
+          <div class=cats>
+           <h4>Cats in Control-Is It a Thing?</h4>
+          </div>
            <div class="content">
              <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
            </div>
          </div>
        </div>
-      </div>
-    </div>
+     </div>
+</div>
     <!-- Small Column -->
     <div class= "col-small">
+     <div class="small-stories">
+       <img class="cookie" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png" alt="Cookie with Bite Missing"/>
+       <div class="story">
+         <h5>NEWS BITES</h5>
+         <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
+</div>
     </div>
 
     </div>
