--- a/index.html
+++ b/index.html
@@ -91,7 +91,46 @@
        <img class="cookie" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png" alt="Cookie with Bite Missing"/>
        <div class="story">
          <h5>NEWS BITES</h5>
-         <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
+         <div class="bites">
+           <p>Cat Emoji Goes Viral </p>
+         </div>
+         <div class="bites">
+           <p>Buy Youtube Views</p>
+         </div>
+         <div class="bites">
+           <p>Home Business Advertising Ideas</p>
+         </div>
+         <div class="bites">
+           <p>Advertising Internet Online</p>
+         </div>
+         <div class="bites">
+           <p>Illustration in Marketing Materials</p>
+         </div>
+         <div class="bites">
+           <p>Finally a Top Secret Way You Can</p>
+         </div>
+       </div>
+     </div>
+   </div>
+ </div>
+         <!-- Footer -->
+         <footer>
+          <div class="footer-content">
+           <div class="footer-logo">
+             <p>My Times</p>
+           </div>
+           <div class="footer-nav">
+             <li><a href="#">World</a></li>
+             <li><a href="#">U.S.</a></li>
+             <li><a href="#">Tech</a></li>
+             <li><a href="#">Science</a></li>
+           </div>
+           </div>
+           <div class="copyw">
+            <p>© 2016, My Times (A Division of Codecademy bite)</p>
+           </div>
+         </footer>
+
 </div>
     </div>
 
